fix: background color improved for visibility

--- a/06-eat-n-split/src/index.css
+++ b/06-eat-n-split/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --color-lightest: #fff4e6;
-  --color-light: #ffe8cc;
+  --color-lightest: #feebd1;
+  --color-light: #fcd4a2;
   --color-medium: #ffa94d;
   --color-dark: #ff922b;
 }
